# yasd

./: .gitignore  CMakeLists.txt  README.md
doc/presentation/: .gitignore  main.tex
doc/presentation/theme/: beamerthemeCodeCourse.sty
doc/presentation/theme/color/: beamercolorthemeCodeCourse.sty
doc/presentation/theme/font/: beamerfontthemeCodeCourse.sty
doc/presentation/theme/inner/: beamerinnerthemeCodeCourse.sty
doc/presentation/theme/outer/: beamerouterthemeCodeCourse.sty
src/: CMakeLists.txt  application.cpp  application.h  configuration.cpp  configuration.h  const.h  input.cpp  input.h  main.cpp  mainwindow.cpp  mainwindow.h  session.cpp  session.h  utils.cpp  utils.h
src/dialogs/: cars_dialog.cpp  cars_dialog.h  charts_dialog.cpp  charts_dialog.h  config_dialog.cpp  config_dialog.h  map_dialog.cpp  map_dialog.h  track_dialog.cpp  track_dialog.h
src/genetic_algorithm/: dna.cpp  dna.h  genetic_algorithm_methods.cpp  genetic_algorithm_methods.h
src/gui/: const.h  main_window.cpp  main_window.h  mainwindow.cpp
src/gui/dialogs/: cars_dialog.cpp  cars_dialog.h  map_dialog.cpp  map_dialog.h  new_dialog.cpp  new_dialog.h
src/gui/pages/: cars_set_page.cpp  cars_set_page.h  map_page.cpp  map_page.h
src/gui/tabs/: config_tab.cpp  config_tab.h
src/gui/widgets/: cars_widget.cpp  cars_widget.h  map_widget.cpp  map_widget.h
src/gui/wizards/: new_wizard.cpp  new_wizard.h
src/gui/wizards/pages/: cars_page.cpp  cars_page.h  map_page.cpp  map_page.h
src/neural_network/: neural_network.cpp  neural_network.h
src/tabs/: config_tab.cpp  config_tab.h  map_tab.cpp  map_tab.h  track_tab.cpp  track_tab.h  track_tab0.cpp  track_tab0.h
src/tabs/cars/: car.cpp  car.h
src/tabs/track/: track.cpp  track.h
src/widgets/: track_widget.cpp  track_widget.h
src/widgets/cars/: car.cpp  car.h
src/widgets/track/: track.cpp  track.h
src/windows/: input.cpp  input.h  main_window.cpp  main_window.h  track_window.cpp  track_window.h  transform3d.cpp  transform3d.h  vertex.h
src/windows/cars/: car.cpp  car.h
src/windows/shaders/: simple.frag  simple.vert
src/windows/track/: track.cpp  track.h
src/wizards/: new_wizard.cpp  new_wizard.h
src/wizards/pages/: cars_page.cpp  cars_page.h  map_page.h  track_page.cpp  track_page.h
